fix/bug: main-section overflow

--- a/styles/styles.scss
+++ b/styles/styles.scss
@@ -37,6 +37,10 @@ a {
   color: inherit;
 }
 
+main {
+  overflow: hidden;
+}
+
 /* ---------------------------PRE-LOADER--------------------------- */
 .preloader {
   position: fixed;
